scripts/install-dump/2025-09-08-073921/whoami/ingresses.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
    creationTimestamp: "2025-09-01T11:18:31Z"
    generation: 7
    labels:
      kustomize.toolkit.fluxcd.io/name: apps
      kustomize.toolkit.fluxcd.io/namespace: flux-system
    name: whoami
    namespace: whoami
    resourceVersion: "2119735"
    uid: cb7d2969-9c24-4e1b-adef-615b498faebc
  spec:
    ingressClassName: nginx
    rules:
    - host: whoami.nudger.logo-solutions.fr
      http:
        paths:
        - backend:
            service:
              name: whoami
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.111.78.164
kind: List
metadata:
  resourceVersion: ""
